[package]
name = "o-o"
description = "Enables commands that assume the standard input and output to read and write to files specified in the command line."
version = "0.4.4"
edition = "2021"
authors = ["Toshihiro Kamiya <kamiya@mbj.nifty.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/tos-kamiya/o-o"
keywords = ["cli", "utility"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.2"
tempfile = "3"
anyhow = "1.0"
ng-clp = "0.3"
thiserror = "1.0"
remove_dir_all = ">0.8.0"

[profile.release]
lto = true
